Prevent quick filter buttons to break at 960-1003px

--- a/core/app/shell/src/themes/suite8/css/components/_button.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_button.scss
@@ -220,7 +220,7 @@ button {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 120px;
+    max-width: 104px;
     padding: 0.3em .5em;
     color: $off-white;
   }
